// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notes delete note w/children 1`] = `
Array [
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`notes query query child note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "parent": "root",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`notes query query root note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "parent": "root",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "root",
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`notes query query root: root note 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "root",
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`schema query non-root 1`] = `
Object {
  "data": Array [
    Object {
      "fname": "foo",
      "imports": Array [],
      "root": Object {
        "children": Array [
          "ch1",
        ],
        "id": "foo",
        "parent": "root",
        "title": "foo",
      },
      "schemas": Object {
        "ch1": Object {
          "body": "",
          "children": Array [],
          "created": 1602363382317,
          "data": Object {},
          "desc": "",
          "fname": "__empty",
          "id": "ch1",
          "parent": "foo",
          "title": "ch1",
          "type": "schema",
          "updated": 1602363382317,
        },
        "foo": Object {
          "body": "",
          "children": Array [
            "ch1",
          ],
          "created": 1602363382317,
          "data": Object {},
          "desc": "",
          "fname": "__empty",
          "id": "foo",
          "parent": "root",
          "title": "foo",
          "type": "schema",
          "updated": 1602363382317,
        },
      },
      "version": 1,
    },
    Object {
      "fname": "root",
      "imports": Array [],
      "root": Object {
        "children": Array [],
        "id": "root",
        "parent": "root",
        "title": "root",
      },
      "schemas": Object {
        "root": Object {
          "body": "",
          "children": Array [],
          "created": 1602363382317,
          "data": Object {},
          "desc": "",
          "fname": "__empty",
          "id": "root",
          "parent": "root",
          "title": "root",
          "type": "schema",
          "updated": 1602363382317,
        },
      },
      "version": 1,
    },
  ],
  "error": null,
}
`;

exports[`schema write simple schema 1`] = `
"version: 1
imports: []
schemas:
  - id: pro
    children: []
    title: pro
    parent: root
"
`;
